--- a/action.yml
+++ b/action.yml
@@ -1,18 +1,24 @@
-name: 'The name of your action here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: "Open Github Issue"
+description: "Open Github Issue"
+author: "David Koch"
 
 # Define your inputs here.
 inputs:
-  milliseconds:
-    description: 'Your input description here'
+  token:
+    description: "Github Token"
     required: true
-    default: '1000'
-
+  title:
+    description: "Issue Title"
+    required: true
+  body:
+    description: "Issue Body"
+  assignees:
+    description: "Issue Assignees"
+    
 # Define your outputs here.
 outputs:
-  time:
-    description: 'Your output description here'
+  issue:
+    description: "The issue object as a json string"
 
 runs:
   using: node20
